--- a/kubernetes/apps/database/mariadb/cluster/backup.yaml
+++ b/kubernetes/apps/database/mariadb/cluster/backup.yaml
@@ -8,7 +8,7 @@ spec:
   mariaDbRef:
     name: mariadb
   schedule:
-    cron: "*/1 * * * *"
+    cron: "0 1 * * *"
     suspend: false
   maxRetention: 168h # 7 days
   storage:
