--- a/kubernetes/apps/default/pocket-id/app/helmrelease.yaml
+++ b/kubernetes/apps/default/pocket-id/app/helmrelease.yaml
@@ -90,7 +90,7 @@ spec:
           - "{{ .Release.Name }}.goyangi.cloud"
           - "id.goyangi.cloud"
         parentRefs:
-          - name: internal
+          - name: external
             namespace: kube-system
             sectionName: https
         rules:
