--- a/kubernetes/apps/argocd/deploykf/app/deploykf-app-of-apps.yaml
+++ b/kubernetes/apps/argocd/deploykf/app/deploykf-app-of-apps.yaml
@@ -98,6 +98,8 @@ spec:
                     requests:
                       cpu: 10m
                       memory: 10Mi
+                    limits:
+                      memory: 500Mi
                 backgroundController:
                   replicas: 1
                   resources:
