--- a/kubernetes/apps/default/jellyfin/app/helmrelease.yaml
+++ b/kubernetes/apps/default/jellyfin/app/helmrelease.yaml
@@ -82,9 +82,7 @@ spec:
             port: &port 8096
     route:
       app:
-        hostnames:
-          - "{{ .Release.Name }}.goyangi.cloud"
-          - "jf.goyangi.cloud"
+        hostnames: ["{{ .Release.Name }}.goyangi.cloud"]
         parentRefs:
           - name: external
             namespace: kube-system
