--- a/kubernetes/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
@@ -1,19 +1,19 @@
 ---
- # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/source.toolkit.fluxcd.io/ocirepository_v1beta2.json
- apiVersion: source.toolkit.fluxcd.io/v1beta2
- kind: OCIRepository
- metadata:
-   name: kube-prometheus-stack
- spec:
-   interval: 1h
-   layerSelector:
-     mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
-     operation: copy
-   ref:
-     tag: 70.2.1
-   url: oci://ghcr.io/prometheus-community/charts/kube-prometheus-stack
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/source.toolkit.fluxcd.io/ocirepository_v1beta2.json
+apiVersion: source.toolkit.fluxcd.io/v1beta2
+kind: OCIRepository
+metadata:
+  name: kube-prometheus-stack
+spec:
+  interval: 1h
+  layerSelector:
+    mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
+    operation: copy
+  ref:
+    tag: 70.2.1
+  url: oci://ghcr.io/prometheus-community/charts/kube-prometheus-stack
 ---
-# yaml-language-server: $schema=https://kubernetes-schemas.solanyn.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
@@ -40,13 +40,13 @@ spec:
     cleanPrometheusOperatorObjectNames: true
     alertmanager:
       route:
-         main:
-           enabled: true
-           hostnames: ["alertmanager.goyangi.cloud"]
-           parentRefs:
-             - name: internal
-               namespace: kube-system
-               sectionName: https
+        main:
+          enabled: true
+          hostnames: ["alertmanager.goyangi.cloud"]
+          parentRefs:
+            - name: internal
+              namespace: kube-system
+              sectionName: https
       alertmanagerSpec:
         alertmanagerConfiguration:
           name: alertmanager
@@ -68,13 +68,13 @@ spec:
       enabled: false
     prometheus:
       route:
-         main:
-           enabled: true
-           hostnames: ["prometheus.goyangi.cloud"]
-           parentRefs:
-             - name: internal
-               namespace: kube-system
-               sectionName: https
+        main:
+          enabled: true
+          hostnames: ["prometheus.goyangi.cloud"]
+          parentRefs:
+            - name: internal
+              namespace: kube-system
+              sectionName: https
       prometheusSpec:
         podMonitorSelectorNilUsesHelmValues: false
         probeSelectorNilUsesHelmValues: false
@@ -136,7 +136,7 @@ spec:
               - alert: DockerhubRateLimitRisk
                 annotations:
                   summary: Kubernetes cluster Dockerhub rate limit risk
-                expr: count(time() - container_last_seen{image=~"(docker.io).*",container!=""} < 30) > 100
+                expr: count(time() - container_last_seen{image=~"(docker.io).*",container!=""} < 30) > 25
                 labels:
                   severity: critical
       oom-rules:
