--- a/kubernetes/apps/kubeflow/gitrepository.yaml
+++ b/kubernetes/apps/kubeflow/gitrepository.yaml
@@ -3,7 +3,7 @@ apiVersion: source.toolkit.fluxcd.io/v1
 kind: GitRepository
 metadata:
   name: kubeflow-manifests
-  namespace: flux-system
+  namespace: kubeflow
 spec:
   interval: 5m
   url: https://github.com/kubeflow/manifests
