--- a/kubernetes/apps/default/pocket-id/app/helmrelease.yaml
+++ b/kubernetes/apps/default/pocket-id/app/helmrelease.yaml
@@ -86,7 +86,9 @@ spec:
             port: *port
     route:
       app:
-        hostnames: ["id.goyangi.cloud"]
+        hostnames:
+          - "{{ .Release.Name }}.goyangi.cloud"
+          - id.goyangi.cloud
         parentRefs:
           - name: external
             namespace: kube-system
